--- a/html/index.html
+++ b/html/index.html
@@ -5,27 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/dist/css/main.css" />
-    <title>Document</title>
+    <title>Portfolio</title>
   </head>
   <body>
-      <div class = 'wrapper'>
-    <div class="header">
-      <a href="#" class="header-heading">Dany Malinskyi</a>
-      <ul>
-        <li><a href="#">Articles</a></li>
-        <li><a href="#">Chats</a></li>
-        <li><a href="#">Awards</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
-      <a class="header-button" href="#">Get In Touch</a>
-    </div>
+    <div class="wrapper">
+      <div class="header">
+        <a href="#" class="header-heading">Dany Malinskyi</a>
+        <ul>
+          <li><a href="#">Articles</a></li>
+          <li><a href="#">Chats</a></li>
+          <li><a href="#">Awards</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+        <a class="header-button" href="#">Get In Touch</a>
+      </div>
 
-    <div class = 'slang'>
-        <div class="slang-content"> 
-            <h1>Helping Companies build better, scalable software.</h1>
+      <div class="slang">
+        <div class="slang-content">
+          <h1>Helping Companies build better, scalable software.</h1>
+          <p>
+            Award-Winning web developer and author, with over 15+ years of working experience with
+            Fortune 500 companies like Apple, Google, Facebook and more.
+          </p>
         </div>
-    </div>
-</div>
+      </div>
 
+      <div class="companies-logo">
+        <img src="/Layout/Assets/Logos/Walmart.svg" alt="walmart logo" />
+        <img src="/Layout/Assets/Logos/JP Morgan.svg" alt="morgan logo" />
+        <img src="/Layout/Assets/Logos/Visa.svg" alt="visa logo" />
+        <img src="/Layout/Assets/Logos/Tinder.svg" alt="tinder logo" />
+        <img src="/Layout/Assets/Logos/Samsung.svg" alt="samsung logo" />
+        <img src="/Layout/Assets/Logos/Verizon.svg" alt="verizon logo" />
+      </div>
+
+      <div class="images-section">
+        <div class="images-section_1">
+          <img src="/Layout/Assets/Spense.png" alt="Spense image" />
+          <h1>Spense.com →</h1>
+          <p>
+            Rethinking the way writers get paid, an open-source platform designed to help writers
+            focus more on writing, and less on when and how they'll get paid. Project in
+            collaboration with Codewell.cc
+          </p>
+        </div>
+        <div class="images-section_2">
+          <img src="/Layout/Assets/YelpCamp.png" alt="YalpCamp image" />
+          <h1>YelpCamp.com →</h1>
+          <p>
+            Allowing backpack travelers to perfectly plan their trip through an open-source platform
+            similar to TripAdvisor. With over 1m MAU, YelpCamp has been the crowd's favorite in
+            2021.
+          </p>
+        </div>
+      </div>
+
+
+      
+
+
+    </div>
   </body>
 </html>
