--- a/html/index.html
+++ b/html/index.html
@@ -60,10 +60,22 @@
         </div>
       </div>
 
-
-      
-
-
+      <div class="bgc-section">
+        <div class="bgc-section_1">
+          <h1>A co-founder at one of the world's largest communities.</h1>
+          <p>
+            The combined experience I have working at the top Fortune 500 companies has allowed me
+            to developer a skillset that helps me in not just development, but in every aspect of
+            any business.
+          </p>
+          <p>
+            I'm proud to announce that I am now working at one of the world's largest communities
+            teaching young minds about how to sell yourself as a developer and open them to a whole
+            new world of opportunities.
+          </p>
+        </div>
+        <div class="bgc-section_1"></div>
+      </div>
     </div>
   </body>
 </html>
