--- a/html/index.html
+++ b/html/index.html
@@ -59,22 +59,61 @@
           </p>
         </div>
       </div>
-
-      <div class="bgc-section">
-        <div class="bgc-section_1">
-          <h1>A co-founder at one of the world's largest communities.</h1>
-          <p>
-            The combined experience I have working at the top Fortune 500 companies has allowed me
-            to developer a skillset that helps me in not just development, but in every aspect of
-            any business.
-          </p>
-          <p>
-            I'm proud to announce that I am now working at one of the world's largest communities
-            teaching young minds about how to sell yourself as a developer and open them to a whole
-            new world of opportunities.
-          </p>
+    </div>
+    <div class="banner">
+      <div class="wrapper">
+        <div class="bgc-section">
+          <div class="bgc-section_1">
+            <h1>A co-founder at one of the world's largest communities.</h1>
+            <p>
+              The combined experience I have working at the top Fortune 500 companies has allowed me
+              to developer a skillset that helps me in not just development, but in every aspect of
+              any business.
+            </p>
+            <p>
+              I'm proud to announce that I am now working at one of the world's largest communities
+              teaching young minds about how to sell yourself as a developer and open them to a
+              whole new world of opportunities.
+            </p>
+          </div>
+          <div class="bgc-section_2">
+            <p>
+              As a developer, you have everything available to you and all that's holding you back
+              is yourself.
+            </p>
+            <p>A quote I live by perfectly illustrates what I mean.</p>
+            <p>
+              "How big would you dream, if you knew you wouldn't fail?" You've already gone through
+              the hardest parts being a developer, it's time to elevate your skills and become a
+              leader in something you're passionate about.
+            </p>
+            <p>I'm happy to chat over coffee some time about how I can help your company.</p>
+          </div>
         </div>
-        <div class="bgc-section_1"></div>
+      </div>
+    </div>
+
+    <div class="wrapper">
+      <div class="footer-interest">
+        <h1>Interested working with me?</h1>
+        <p>
+          I'm active on all social media platforms listed below, but you can also me an email and I
+          will get back to you within 24-48 hours.
+        </p>
+        <a class="header-button" href="#">Get In Touch</a>
+      </div>
+    </div>
+
+    <div class="banner_2">
+      <div class="wrapper">
+        <div class="footer">
+          <div class="selflink"><h1>Dany Malinskyi</h1></div>
+          <div class="footer-icons">
+            <img src="/Layout/Assets/Social Icons/Twitter.svg" alt="" />
+            <img src="/Layout/Assets/Social Icons/LinkedIn.svg" alt="" />
+            <img src="/Layout/Assets/Social Icons/Github.svg" alt="" />
+          </div>
+        </div>
       </div>
     </div>
   </body>
